<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">放音乐</string>
    <string name="my">我的</string>
    <string name="online">在线</string>
    <string name="best">精选</string>
    <string name="billboard">榜单</string>
    <string name="radio">随心听</string>
    <string name="recent_play">最近播放</string>
    <string name="download_management">下载管理</string>
    <string name="favorites">收藏夹</string>
    <string name="my_music_list">我的歌单</string>
    <string name="random_play">随机播放</string>
    <string name="unknown">未知</string>
    <string name="unknown_artist">未知歌手</string>
    <string name="unknown_album">未知专辑</string>
    <string name="no_local_music">无本地音乐</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="setting">设置</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="setting_function">功能设置</string>
    <string name="lyric_on_the_desktop">在桌面上悬浮显示音乐歌词</string>
    <string name="desktop_lyric">桌面歌词</string>
    <string name="music_closes_automatically_after_a_period_of_time">一段时间后音乐自动关闭</string>
    <string name="use_when_listening_to_music_before_bedtime">适合睡前听歌时使用</string>
    <string name="close">关闭</string>
    <string name="sleep_mode">睡眠模式</string>
    <string name="file_filter">文件过滤</string>
    <string name="filter_by_size">按大小过滤</string>
    <string name="filter_by_duration">按时长过滤</string>
    <string name="filter_some_small_size_audio_file">过滤小于1024KB的歌曲</string>
    <string name="filter_some_short_duration_audio_file">过滤60s以下的歌曲</string>
    <string name="copyright">Copyright © 2013&#045;%d SUSE</string>
    <string name="slogan">总有惊喜在身边</string>
    <string name="play_time_start">00:00</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_loop_single">单曲循环</string>
    <string name="mode_loop">列表循环</string>
    <string name="click_again_to_return_to_desktop">再按一次返回桌面</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="exit">退出</string>
    <string name="no">不开启</string>
    <string name="ten_minutes_later">10分钟后</string>
    <string name="twenty_minutes_later">20分钟后</string>
    <string name="thirty_minutes_later">30分钟后</string>
    <string name="an_hour_later">1小时后</string>
    <string name="custom">自定义</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="time_pick_ok">确定</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="sort_way">排序方式</string>
    <string name="sort_by_artist">按歌手名</string>
    <string name="sort_by_single">按单曲名</string>
    <string name="sort_by_album">按专辑名</string>
    <string name="sort_by_add_time">按添加时间</string>
    <string name="sort_by_play_time">按播放次数</string>
    <string name="sort_by_song_count">按歌曲数量</string>
    <string name="sort_by_folder_name">按文件夹名</string>
    <string name="local_musics">本地音乐</string>
    <string name="search_local">搜索本地歌曲</string>
    <string name="cancel">取消</string>
    <string name="get_cover_and_lyric">获取封面歌词</string>
    <string name="update_quality">升级音质</string>
    <string name="loading">努力加载中…</string>
    <string name="clear_all">清空</string>
    <string name="added_to_next_play">已加入下一首播放</string>

    <string name="duration_format" translatable="false">
        <xliff:g id="hours">%1$s</xliff:g>
        <xliff:g id="minutes">%2$s</xliff:g>
    </string>
    <string name="duration_format_short" translatable="false">
        <xliff:g id="format">%2$d:%3$02d</xliff:g>
    </string>
    <string name="duration_format_long" translatable="false">
        <xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g>
    </string>

    <string name="count_song">
        <xliff:g id="count">%d</xliff:g>首歌曲
    </string>
    <string name="count_songs">
        <xliff:g id="count">%d</xliff:g> 首歌曲
    </string>
    <string name="count_album">
        <xliff:g id="count">%d</xliff:g> 张专辑
    </string>
    <string name="count_albums">
        <xliff:g id="count">%d</xliff:g> 张专辑
    </string>
    <string name="count_artist">
        <xliff:g id="count">%d</xliff:g> 位艺术家
    </string>
    <string name="count_artists">
        <xliff:g id="count">%d</xliff:g> 位艺术家
    </string>

    <string name="number_song_add_queue">
        已将 <xliff:g example="1" id="number">%d</xliff:g> 首歌曲添加到队列
    </string>
    <string name="number_songs_add_queue">
        已将 <xliff:g example="1" id="number">%d</xliff:g> 首歌曲添加到队列
    </string>
    <string name="number_song_add_playlist">
        已将 <xliff:g example="1" id="number">%d</xliff:g> 首歌曲添加到播放列表
    </string>
    <string name="number_songs_add_playlist">
        已将 <xliff:g example="1" id="number">%d</xliff:g> 首歌曲添加到播放列表
    </string>
    <string name="queue_is_empty">播放队列为空</string>
    <string name="favorite">收藏</string>
    <string name="get_cover_lrc">获取封面和歌词</string>
    <string name="song_name">歌曲：</string>
    <string name="artist_name">歌手：</string>
    <string name="album_name">专辑：</string>
    <string name="folder_name">文件夹：</string>
    <string name="add_to_playlist">收藏到歌单</string>
    <string name="create_new_playlist">新建歌单</string>
    <string name="input_playlist_title">请输入歌单标题</string>
    <string name="submit">提交</string>
    <string name="share_to">分享到</string>
    <string name="sure_to_delete_music">确定删除歌曲吗</string>
    <string name="confirm">确定</string>
    <string name="sure_to_set_ringtone">确定设置成铃声吗</string>
    <string name="set_ringtone_success">设置铃声成功！</string>
    <string name="file_name">文件名称：</string>
    <string name="file_duration">播放时长：</string>
    <string name="file_size">文件大小：</string>
    <string name="file_url">文件路径：</string>
    <string name="created_play_lists">创建的歌单</string>
    <string name="play_all">播放全部</string>
    <string name="sort_order_entry_az">按名称排序</string>
    <string name="sort_order_entry_date_added">按添加时间排序</string>
    <string name="sort_order_entry_artist">按歌手排序</string>
    <string name="sort_order_entry_album">按专辑排序</string>
    <string name="playlist">播放列表</string>
    <string name="_6_30">下午 6：30</string>
    <string name="next_play">下一首播放</string>
    <string name="delete">删除</string>
    <string name="sure_to_remove_from_local_list">确定将所选音乐从本地列表中移除吗？</string>
    <string name="select_all">全选</string>
    <string name="selected_zero">已选择0项</string>
    <string name="select_none">取消全选</string>
    <string name="favorite_all">收藏全部</string>
    <string name="search">搜索</string>
    <string name="night_mode">夜间模式</string>
    <string name="use">使用</string>
    <string name="in_use">使用中</string>
    <string name="skin">个性换肤</string>

    <string name="sakura">樱花粉</string>
    <string name="firey">火焰红</string>
    <string name="sand">沙滩黄</string>
    <string name="wood">森林绿</string>
    <string name="storm">风暴蓝</string>
    <string name="hope">希望紫</string>

</resources>
