<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert"
        android:orderInCategory="100"
        android:title="  "
        app:showAsAction="always"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az" />
            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_order_entry_date_added" />
            <item
                android:id="@+id/menu_sort_by_artist"
                android:title="@string/sort_order_entry_artist" />
            <item
                android:id="@+id/menu_sort_by_album"
                android:title="@string/sort_order_entry_album" />
        </menu>

    </item>
</menu>